# SQL-DB-Creator

./: .gitignore  README.md
SQL-DB-Creator-Example/: README.md
SQL-DB-Creator-Example/sql_db_creator_mysql_example/: Cargo.toml
SQL-DB-Creator-Example/sql_db_creator_mysql_example/src/: main.rs  secure.rs
SQL-DB-Creator-Example/sql_db_creator_mysql_example/src/db/countries/: geography.json  government.json
SQL-DB-Creator-Example/sql_db_creator_mysql_example/src/db/flowers/: infos.json  region.json
SQL-DB-Creator-Example/sql_db_creator_postgres_example/: Cargo.toml
SQL-DB-Creator-Example/sql_db_creator_postgres_example/src/: main.rs
SQL-DB-Creator-Example/sql_db_creator_postgres_example/src/db/countries/: geography.json  government.json
SQL-DB-Creator-Example/sql_db_creator_postgres_example/src/db/flowers/: infos.json  region.json
SQL-DB-Creator/sql_db_creator/: Cargo.toml  README.md
SQL-DB-Creator/sql_db_creator/src/: lib.rs
SQL-DB-Creator/sql_db_creator/src/db/: db.rs  dbs.rs  mod.rs
SQL-DB-Creator/sql_db_creator/src/sql/: mod.rs  mysql.rs  postgres_sql.rs
SQL-DB-Creator/sql_db_creator/src/util/: mod.rs  paths.rs  strings.rs
