[package]
name = "sql_db_creator"
version = "0.2.5"
edition = "2021"
authors = ["Sokrates Bousios"]
description = "Generate sql databases by only configure the data of the databases in json files"
repository = "https://github.com/Sok-Bou/SQL-DB-Creator"
documentation = "https://docs.rs/sql_db_creator"
keywords = ["mysql", "postgressql", "database", "relational"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", git = "https://github.com/demurgos/sqlx.git", branch = "issue-1477", features = [ "postgres", "mysql", "migrate", "macros", "chrono", "runtime-async-std-rustls" ] }
actix-web = "4"
futures = "0.3"
serde_json = "1.0.91"
